@@ -1,19 +1,8 @@
 package twistedgate.immersiveposts.common.data.loot;
 
-import java.util.Arrays;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
-import java.util.function.BiConsumer;
-import java.util.function.Consumer;
-import java.util.function.Supplier;
-
-import com.google.common.collect.ImmutableList;
-import com.mojang.datafixers.util.Pair;
-
-import net.minecraft.data.DataGenerator;
+import net.minecraft.data.PackOutput;
 import net.minecraft.data.loot.LootTableProvider;
+import net.minecraft.data.loot.LootTableSubProvider;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.world.level.ItemLike;
 import net.minecraft.world.level.block.Block;
@@ -21,10 +10,8 @@ import net.minecraft.world.level.block.FenceBlock;
 import net.minecraft.world.level.storage.loot.LootPool;
 import net.minecraft.world.level.storage.loot.LootTable;
 import net.minecraft.world.level.storage.loot.LootTable.Builder;
-import net.minecraft.world.level.storage.loot.LootTables;
 import net.minecraft.world.level.storage.loot.ValidationContext;
 import net.minecraft.world.level.storage.loot.entries.LootItem;
-import net.minecraft.world.level.storage.loot.parameters.LootContextParamSet;
 import net.minecraft.world.level.storage.loot.parameters.LootContextParamSets;
 import net.minecraft.world.level.storage.loot.predicates.ExplosionCondition;
 import net.minecraft.world.level.storage.loot.providers.number.ConstantValue;
@@ -35,48 +22,56 @@ import twistedgate.immersiveposts.enums.EnumPostMaterial;
 import twistedgate.immersiveposts.util.loot.BaseCoverDropLootEntry;
 import twistedgate.immersiveposts.util.loot.PostMaterialDropLootEntry;
 
+import java.util.Arrays;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
+import java.util.function.BiConsumer;
+
 public class IPOBlockLoot extends LootTableProvider{
-	public IPOBlockLoot(DataGenerator gen){
-		super(gen);
+	
+	public IPOBlockLoot(PackOutput output){
+		super(output, Set.of(), List.of());
 	}
 	
+	/* // Why in the world is it a Final method now?!
 	@Override
 	public String getName(){
 		return "IPOLootTables";
 	}
+	*/
 	
 	@Override
-	protected List<Pair<Supplier<Consumer<BiConsumer<ResourceLocation, Builder>>>, LootContextParamSet>> getTables(){
-		return ImmutableList.of(Pair.of(LootyLoot::new, LootContextParamSets.BLOCK));
+	public List<SubProviderEntry> getTables(){
+		return List.of(new SubProviderEntry(LootyLoot::new, LootContextParamSets.BLOCK));
 	}
 	
 	@Override
-	protected void validate(Map<ResourceLocation, LootTable> map, ValidationContext validationtracker){
+	protected void validate(Map<ResourceLocation, LootTable> map, ValidationContext validationcontext){
 		map.forEach((id, table) -> {
-			LootTables.validate(validationtracker, id, table);
+			table.validate(validationcontext);
 		});
 	}
 	
-	public class LootyLoot implements Consumer<BiConsumer<ResourceLocation, LootTable.Builder>>{
+	public static class LootyLoot implements LootTableSubProvider{
 		private final Set<ResourceLocation> generatedTables = new HashSet<>();
 		private BiConsumer<ResourceLocation, LootTable.Builder> out;
 		
 		@Override
-		public void accept(BiConsumer<ResourceLocation, Builder> t){
+		public void generate(BiConsumer<ResourceLocation, Builder> t){
 			this.out = t;
 			
 			// Fences
-			for(RegistryObject<FenceBlock> b:IPOContent.Blocks.Fences.ALL_FENCES){
+			for(RegistryObject<FenceBlock> b: IPOContent.Blocks.Fences.ALL_FENCES){
 				registerSelfDropping(b);
 			}
 			
 			// Posts
-			for(EnumPostMaterial mat:EnumPostMaterial.values()){
+			for(EnumPostMaterial mat: EnumPostMaterial.values()){
 				RegistryObject<PostBlock> b = IPOContent.Blocks.Posts.getRegObject(mat);
 				register(b, createPoolBuilder().add(PostMaterialDropLootEntry.builder()));
 			}
-			
-			
 			
 			registerSelfDropping(IPOContent.Blocks.POST_BASE, createPoolBuilder().add(BaseCoverDropLootEntry.builder()));
 		}
@@ -93,7 +88,7 @@ public class IPOBlockLoot extends LootTableProvider{
 		
 		private <B extends Block> void register(RegistryObject<B> b, LootPool.Builder... pools){
 			LootTable.Builder builder = LootTable.lootTable();
-			for(LootPool.Builder pool:pools)
+			for(LootPool.Builder pool: pools)
 				builder.withPool(pool);
 			register(b, builder);
 		}
